<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomovil"
    tools:context=".activitys.ErregistratuActivity">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="691dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textErregistroa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Erregistroa"
            android:textColor="#0D4B0F"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="84dp" />

        <EditText
            android:id="@+id/editTextIzAbiz"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/izena_abizena"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <EditText
            android:id="@+id/editTextErabiltzaileaE"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Erabiltzailea"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Pasahitza"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <EditText
            android:id="@+id/editTextHelbidea"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/helbidea"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="299dp"
            android:layout_height="43dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="visible"
            tools:text="@string/Jaiotza_data" />

        <Button
            android:id="@+id/buttonDatePicker"
            android:layout_width="299dp"
            android:layout_height="43dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:shapeAppearance="@style/MaterialAlertDialog.Material3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="84dp" />

        <Button
            android:id="@+id/buttonErregistratu"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:backgroundTint="#43A047"
            android:text="@string/Sartu" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>