<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomovil"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activitys.LoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#094709"
        android:src="@drawable/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
<<<<<<< HEAD
        android:id="@+id/LoginTitulua"
=======
        android:id="@+id/textLogin"
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#43A047"
        android:textSize="48sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
<<<<<<< HEAD
        android:id="@+id/ErabilztaileaL"
=======
        android:id="@+id/editTextErabiltzailea"
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f
        android:layout_width="299dp"
        android:layout_height="42dp"
        android:background="@color/white"
        android:ems="10"
<<<<<<< HEAD
        android:hint="@string/Erabiltzailea"
        android:inputType="text" />
=======
        android:inputType="text"
        android:text="@string/Erabiltzailea" />
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f

    <Space
        android:layout_width="match_parent"
        android:layout_height="28dp" />

    <EditText
<<<<<<< HEAD
        android:id="@+id/PasswordL"
=======
        android:id="@+id/editTextPassword"
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f
        android:layout_width="299dp"
        android:layout_height="42dp"
        android:background="@color/white"
        android:ems="10"
<<<<<<< HEAD
        android:hint="@string/Pasahitza"
        android:inputType="textPassword" />
=======
        android:inputType="textPassword"
        android:text="@string/Pasahitza" />
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <Button
<<<<<<< HEAD
        android:id="@+id/SartuL"
=======
        android:id="@+id/buttonLogin"
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f
        android:layout_width="299dp"
        android:layout_height="50dp"
        android:backgroundTint="#43A047"
        android:text="@string/Sartu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
<<<<<<< HEAD
        android:id="@+id/ErregistratuLink"
        android:layout_width="158dp"
=======
        android:id="@+id/textErregistroaLink"
        android:layout_width="139dp"
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/Erregistroa"
        android:textColor="#D3FFD5"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
<<<<<<< HEAD
        android:id="@+id/Erregistratu_gabe"
=======
        android:id="@+id/textView3"
>>>>>>> ff846797339835609f9f97b6edbd91aaafdf182f
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/Sartu_erregistratu_gabe"
        android:textColor="#D3FFD5"
        android:textSize="24sp" />

</LinearLayout>